# sci-data-viewer

./: .gitignore  Dockerfile  README.rst  app.py  resources.py
client/: .env.development  package.json  rollup.config.js  vite.config.js
client/src/: App.vue  ThreeView.js  api.js  geoEntities.js  main.js  markers.js  shaders.js  style.css  utils.js
client/src/components/: NavBarEntity.vue  OrthoCamCtrls.vue  PerspCamCtrls.vue  SceneHelpers.vue  SidePanel.vue  SourceListItem.vue  SourcesList.vue  ThreeViewer.vue  Viewport.vue
client/src/components/sourceListItems/: denseCollection.vue  fwIterable.vue  sparsePagination.vue  static.vue  staticWithExpiration.vue
server-cpp/: CMakeLists.txt  README.rst  main-srv-forking.cc  main-srv-trivial.cc
server-cpp/cmake/: config.cmake.in  pkg-config.pc.in
server-cpp/include/sync-http-srv/: error.hh  logging.hh  resource-json.hh  resource-yaml.hh  resource.hh  routes-view.hh  server.hh  staticFilesRoute.hh  uri.hh
server-cpp/include/sync-http-srv/resources/: resource.hh
server-cpp/src/: error.cc  logging.cc  resource-json.cc  resource-yaml.cc  resource.cc  routes-view.cc  server.cc  staticFilesRoute.cc  uri.cc
server-cpp/src/resources/: processes.cc
